--- a/app/views/academics/index.html.erb
+++ b/app/views/academics/index.html.erb
@@ -1,31 +1,12 @@
-<h1>Listing academics</h1>
+<h1>Academic Staff</h1>
 
 <table>
-  <tr>
-    <th>Title</th>
-    <th>First</th>
-    <th>Last</th>
-    <th>Work phone</th>
-    <th>Work mail</th>
-    <th>Home url</th>
-    <th>Image url</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
 <% @academics.each do |academic| %>
-  <tr>
-    <td><%= academic.title %></td>
-    <td><%= academic.first %></td>
-    <td><%= academic.last %></td>
-    <td><%= academic.work_phone %></td>
-    <td><%= academic.work_mail %></td>
-    <td><%= academic.home_url %></td>
-    <td><%= academic.image_url %></td>
-    <td><%= link_to 'Show', academic %></td>
-    <td><%= link_to 'Edit', edit_academic_path(academic) %></td>
-    <td><%= link_to 'Destroy', academic, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
+  <tr>  
+    <td><%= link_to academic, academic %></td>
+      <td> x<%= academic.work_phone %></td>
+      <td><%= link_to '[Mail]', academic.mailto %></td>
+      <td><%= link_to '[Home]', academic.home_url %></td>
   </tr>
 <% end %>
 </table>
