--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Schoolmaster</title>
+  <title>SchoolMaster</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div id="header">
+<div id="banner">
+  <%= @page_title || "SchoolMaster" %>
+</div>
+<div id="navigation">
+Sign in
+</div>
+</div>
 
 <%= yield %>
 
