--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,14 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>First:</b>
-  <%= @student.first %>
-</p>
+<h3>Graduate Students</h3>
 
-<p>
-  <b>Last:</b>
-  <%= @student.last %>
-</p>
+<h2><%= @student %></h2>
 
 <p>
   <b>Registration:</b>
@@ -92,4 +86,5 @@
 
 
 <%= link_to 'Edit', edit_student_path(@student) %> |
+<%= link_to 'Delete', @student, :method => :delete, :data => { :confirm => 'Are you sure?' } %> |
 <%= link_to 'Back', students_path %>
