added home page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <%= @page_title || "SchoolMaster" %>
 </div>
 <div id="navigation">
-Sign in
+<%= link_to 'Home', root_path %> | Sign in
 </div>
 </div>
 
