--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the students controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.missing {
+  color: red;
+}
+
+table.dates {
+  border-collapse:collapse;
+  float: right;
+}
+table.dates, table.dates th, table.dates td {
+  border: 1px solid black;
+}
+
+h2 {
+  color: #123456;
+}
