--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,10 +7,10 @@
 From  here you can access
 <ul>
 <li>
-a list of <%= link_to 'academics', academics_path %>
+a list of <%= Academic.all.count %> <%= link_to 'academics', academics_path %>
 </li>
 <li>
-a list of <%= link_to 'postgraduate students', students_path %>
+a list of <%= Student.all.count %> <%= link_to 'postgraduate students', students_path %>
 </li>
 </ul>
 </p>
