--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.label :location %><br />
+    <%= f.text_field :location %>
   </div>
   <div class="field">
     <%= f.label :capacity %><br />
