--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,21 +1,15 @@
-<h1>Listing rooms</h1>
+<h1>Postgraduate rooms</h1>
 
 <table>
   <tr>
     <th>Location</th>
     <th>Capacity</th>
-    <th></th>
-    <th></th>
-    <th></th>
   </tr>
 
 <% @rooms.each do |room| %>
   <tr>
-    <td><%= room.location %></td>
+    <td><%= link_to room.location, room %></td>
     <td><%= room.capacity %></td>
-    <td><%= link_to 'Show', room %></td>
-    <td><%= link_to 'Edit', edit_room_path(room) %></td>
-    <td><%= link_to 'Destroy', room, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
