--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -12,4 +12,5 @@
 
 
 <%= link_to 'Edit', edit_room_path(@room) %> |
+<%= link_to 'Destroy', @room, :method => :delete, :data => { :confirm => 'Are you sure?' } %> |
 <%= link_to 'Back', rooms_path %>
