rails g scaffold publication_record

--- a/app/views/academics/show.html.erb
+++ b/app/views/academics/show.html.erb
@@ -33,6 +33,13 @@
 <% end %>
 </ul>
 
+<h3>Records</h3>
+<ul>
+<% @academic.publication_records.each do |pr| %>
+<li><%= link_to nil, pr.url %></li>
+<% end %>
+</ul>
+
 <hr />
 
 <%= link_to 'Edit', edit_academic_path(@academic) %> |
