added GRC committees.

--- a/app/assets/stylesheets/schoolmaster.css.scss
+++ b/app/assets/stylesheets/schoolmaster.css.scss
@@ -63,3 +63,13 @@
   padding-top: 4ex;
   padding-left: 2em;
 }
+
+.edit-head {
+  display: inline;
+}
+
+.edit {
+  display: inline;
+  font-size: smaller;
+  vertical-align: super;
+}
