--- a/app/views/academics/_form.html.erb
+++ b/app/views/academics/_form.html.erb
@@ -39,6 +39,14 @@
       </tr>
       <tr>
 	<td>
+	  <%= f.label :school %>
+	</td>
+	<td>
+	  <%= f.select :school, SCHOOLS, :include_blank => true %>
+	</td>
+      </tr>
+      <tr>
+	<td>
 	  <%= f.label :work_phone %>
 	</td>
 	<td>
