replaced location by room_id

--- a/app/views/committees/_form.html.erb
+++ b/app/views/committees/_form.html.erb
@@ -15,7 +15,7 @@
 
   <div class="field">
     <%= f.label :academic_id %><br />
-    <%= f.select :academic_id, options_from_collection_for_select(Academic.all, 'id', 'name') %>
+    <%= f.select :academic_id, options_from_collection_for_select(Academic.all, 'id', 'name'), :include_blank => true %>
   </div>
   <div class="actions">
     <%= f.submit %>
