--- a/app/views/academics/show.html.erb
+++ b/app/views/academics/show.html.erb
@@ -1,6 +1,9 @@
 <div id="side">
   <h3>Academic Staff</h3>
-  <ul><%= render Academic.all %></ul>
+    <% Academic.all.group_by(&:school).each do |school, academics| %>
+      <h4><%= school %></h4>
+      <ul><%= render academics %></ul>
+    <% end %>
 </div>
 <div id="main">
 
@@ -40,12 +43,14 @@
 </ul>
 <% end %>
 
+<% if @academic.publication_records.any? %>
 <h3>Records</h3>
 <ul>
 <% @academic.publication_records.each do |pr| %>
 <li><%= link_to nil, pr.url %></li>
 <% end %>
 </ul>
+<% end %>
 
 <hr />
 
