--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,6 +12,9 @@ a list of <%= Academic.all.count %> <%= link_to 'academics', academics_path %>
 <li>
 a list of <%= Student.all.count %> <%= link_to 'postgraduate students', students_path %>
 </li>
+<li>
+a list of <%= Room.all.count %> <%= link_to 'postgrad rooms', rooms_path %>
+</li>
 </ul>
 </p>
 
