--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,3 +1,9 @@
+<div id="side">
+  <h3>Rooms</h3>
+  <ul><%= render Room.all %></ul>
+</div>
+<div id="main">
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -10,7 +16,16 @@
   <%= @room.capacity %>
 </p>
 
+<h3>Students:</h3>
+<ul>
+<%= render @room.students %>
+</ul>
+
+<hr />
 
 <%= link_to 'Edit', edit_room_path(@room) %> |
 <%= link_to 'Destroy', @room, :method => :delete, :data => { :confirm => 'Are you sure?' } %> |
 <%= link_to 'Back', rooms_path %>
+
+
+</div>
