--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -23,7 +23,7 @@
 <% if not @student.home_url.blank? %>
   | <%= @student.home_url %>
 <% end %>
-  | <%= @student.location %>
+  | <%= @student.room %>
 </p>
 <hr />
 
