split number off room location.

--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -14,6 +14,11 @@
   <div class="field">
     <%= f.label :location %><br />
     <%= f.text_field :location %>
+    <%# f.select :location, LOCATIONS %>
+  </div>
+  <div class="field">
+    <%= f.label :number %><br />
+    <%= f.text_field :number %>
   </div>
   <div class="field">
     <%= f.label :capacity %><br />
