--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -6,10 +6,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Location:</b>
-  <%= @room.location %>
-</p>
+<h2><%= @room %></h2>
 
 <p>
   <b>Capacity:</b>
