move contents of index pages into <div id="main">

--- a/app/views/academics/index.html.erb
+++ b/app/views/academics/index.html.erb
@@ -1,3 +1,4 @@
+<div id="main">
 <h1>Academic Staff</h1>
 
 <% @academics_by_school.each do |school, academics| %>
@@ -18,3 +19,4 @@
 <br />
 
 <%= link_to 'New Academic', new_academic_path %>
+</div>
