--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
+<div id="main">
 <h1>SchoolMaster</h1>
 <p>
   Welcome to the School's digital self.
@@ -17,4 +18,4 @@ a list of <%= Room.all.count %> <%= link_to 'postgrad rooms', rooms_path %>
 </li>
 </ul>
 </p>
-
+</div>
