--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,3 +1,4 @@
+<div id="main">
 <h1>Graduate Students</h1>
 
 <table>
@@ -15,3 +16,4 @@
 <br />
 
 <%= link_to 'New Student', new_student_path %>
+</div>
