--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,3 +1,4 @@
+<div id="main">
 <h1>Postgraduate rooms</h1>
 
 <table>
@@ -19,3 +20,4 @@
 <br />
 
 <%= link_to 'New Room', new_room_path %>
+</div>
