--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,17 +9,23 @@
 <body>
 <div id="header">
   <div id="banner">
-    <%= @page_title || "SchoolMaster" %>
+    <%= link_to "SchoolMaster", root_path %>
   </div>
   <div id="navigation">
     <div id="home"> |
-      <%= link_to 'Home', root_path %> |
       <%= link_to 'Academics', academics_path %> |
       <%= link_to 'Students', students_path %> |
       <%= link_to 'Rooms', rooms_path %> |
     </div>
-    <div id="login">
-      Sign in
+    <div id="login"> |
+ <%= Time.now.strftime('%H:%M:%S (%Z) on %A, %B %d, %Y') %> |
+      <% if user_signed_in? %>
+ <%= link_to current_user.email, edit_user_registration_path %> |
+        <%= link_to 'Sign out', destroy_user_session_path, :method => :delete, :confirm => "Sign out?" %> |
+      <% else %>
+        <%= link_to 'Sign up', new_user_registration_path %> |
+        <%= link_to 'Sign in', new_user_session_path %> |
+      <% end %>
     </div>
   </div>
 </div>
