moved time display from layout to front page.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,8 @@
   Welcome to the School's digital self.
 </p>
 
+<p>It is now <%= Time.now.strftime('%H:%M:%S (%Z) on %A, %B %d, %Y') %>.</p>
+
 <p>
 From  here you can access
 <ul>
