fixed room name on form select.

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -42,7 +42,7 @@
 	  <%= f.label :room_id, "Desk Location" %>
 	</td>
 	<td>
-	  <%= f.select :room_id, Room.all.map { |x| [x.location, x.id] } %>
+	  <%= f.select :room_id, Room.all.map { |x| [x, x.id] } %>
 	</td>
       </tr>
       <tr>
