list room rather than email.

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -8,7 +8,7 @@
     <td><%= link_to student, student %></td>
     <td><%= student.registration %></td>
     <td><%= student.programme %></td>
-    <td><%= student.email %></td>
+    <td><%= student.room %></td>
     <td><%= student.work_phone %></td>
   </tr>
 <% end %>
