--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,6 +1,7 @@
 <div id="main">
 <h1>Graduate Students</h1>
 
+<h2><%= @students.count %> Current Students</h2>
 
 <table>
 <% @students.each do |student| %>
@@ -14,8 +15,22 @@
 <% end %>
 </table>
 
+<h2><%= @former_students.count %> Former Students</h2>
+
+<table>
+<% @former_students.each do |student| %>
+  <tr>
+    <td><%= link_to student, student %></td>
+    <td><%= student.registration %></td>
+    <td><%= student.programme %></td>
+    <td><%= student.room %></td>
+    <td><%= student.work_phone %></td>
+  </tr>
+<% end %>
+</table>
+
 <br />
 
-<%= mail_to @students.map(&:email).join(','), "Mail all", :cc => "goetz.pfeiffer@nuigalway.ie" %> |
+<%= mail_to @students.map(&:email).join(','), "Mail current", :cc => "goetz.pfeiffer@nuigalway.ie" %> |
 <%= link_to 'New Student', new_student_path %>
 </div>
