rm'd id="notice" from show pages.

--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -1,5 +1,4 @@
-<p id="notice"><%= notice %></p>
-
+<div id="main">
 <p>
   <b>Academic:</b>
   <%= @record.academic_id %>
@@ -18,3 +17,4 @@
 
 <%= link_to 'Edit', edit_record_path(@record) %> |
 <%= link_to 'Back', records_path %>
+</div>
