--- a/app/views/supervisions/show.html.erb
+++ b/app/views/supervisions/show.html.erb
@@ -1,5 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-
+<div id="main">
 <%= link_to 'Edit', edit_supervision_path(@supervision) %> |
 <%= link_to 'Back', supervisions_path %>
+</div>
