--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -1,5 +1,4 @@
-<p id="notice"><%= notice %></p>
-
+<div id="main">
 <p>
   <b>Academic:</b>
   <%= @committee.academic_id %>
@@ -13,3 +12,4 @@
 
 <%= link_to 'Edit', edit_committee_path(@committee) %> |
 <%= link_to 'Back', committees_path %>
+</div>
