--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -1,5 +1,4 @@
-<p id="notice"><%= notice %></p>
-
+<div id="main">
 <p>
   <b>Name:</b>
   <%= @role.name %>
@@ -14,3 +13,4 @@
 
 <%= link_to 'Edit', edit_role_path(@role) %> |
 <%= link_to 'Back', roles_path %>
+</div>
