polished room index

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -11,14 +11,14 @@
 <% @rooms.each do |room| %>
   <tr>
     <td><%= link_to room, room %></td>
-    <td><%= room.capacity %></td>
-    <td><%= room.students.count %></td>
+    <td align="right"><%= room.capacity %> (<%= room.capacity - room.students.count %> free)</td>
+    <td align="right"><%= room.students.count %></td>
   </tr>
 <% end %>
   <tr>
     <th>Total:</th>
-    <td><%= @rooms.map{ |x| x.capacity || 0 }.sum %></td>
-    <td><%= @rooms.map{ |x| x.students.count }.sum %></td>
+    <td align="right"><%= @rooms.map{ |x| x.capacity || 0 }.sum %></td>
+    <td align="right"><%= @rooms.map{ |x| x.students.count }.sum %></td>
   </tr>
 </table>
 
