changed "notice" and "alert" from class to id.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,8 @@
   </div>
 </div>
 <div id="columns">
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+  <p id="notice"><%= notice %></p>
+  <p id="alert"><%= alert %></p>
   <%= yield %>
 </div>
 </body>
